[package]
name = "ttgo-camera"
version = "0.1.0"
authors = ["George C. Huntington III "]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "z"
#lto = "off"
overflow-checks = false

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
overflow-checks = false
lto = "off"

[features]
default = ["std", "hal", "embassy", "esp-idf-sys/native"]

pio = ["esp-idf-sys/pio"]
all = ["std", "nightly", "experimental", "embassy"]
hal = ["esp-idf-hal", "embedded-svc", "esp-idf-svc"]
std = [
  "alloc",
  "esp-idf-sys/std",
  "esp-idf-sys/binstart",
  "embedded-svc?/std",
  "esp-idf-hal?/std",
  "esp-idf-svc?/std",
  "esp-idf-hal?/embedded-io-async",
  "esp-idf-hal?/embedded-hal-async",
]
alloc = ["embedded-svc?/alloc", "esp-idf-hal?/alloc", "esp-idf-svc?/alloc"]
nightly = [
  "embedded-svc?/nightly",
  "esp-idf-svc?/nightly",
] # Future: "esp-idf-hal?/nightly"
experimental = ["embedded-svc?/experimental", "esp-idf-svc?/experimental"]
embassy = [
  "esp-idf-hal?/embassy-sync",
  "esp-idf-hal?/critical-section",
  "esp-idf-svc?/embassy-time-driver",
  "esp-idf-svc?/embassy-time-isr-queue",
  "esp-idf-svc?/embassy-sync",
  "esp-idf-svc?/critical-section",
  "esp-idf-svc?/embassy-time-driver",
  "esp-idf-svc?/embassy-time-isr-queue",
]

[dependencies]
chrono = { version = "0.4.31", default-features = false, features = [
  "std",
  "clock",
] }
log = { version = "0.4.17", default-features = false }
esp-idf-sys = { version = "0.33.7", default-features = false }
esp-idf-hal = { version = "0.42.5", optional = true, default-features = false }
esp-idf-svc = { version = "0.47.3", optional = true, default-features = false }
# esp-idf-hal = { version = "0.42.5", features = [
#     "std",
#     "native",
#     "binstart",
#     "nightly",
#     "embedded-io-async",
#     "embedded-hal-async",
# ] }
# esp-idf-svc = { version = "0.47.3", default-features = false, features = [
#     "native",
#     "std",
#     "binstart",
#     "alloc",
#     "nightly",
#     "experimental",
#     "embassy-sync",
#     "critical-section",
#     "embassy-time-driver",
#     "embassy-time-isr-queue",
# ]}

embedded-svc = { version = "0.26.4", optional = true, default-features = false }
embedded-hal = "1.0.0-rc.1"
anyhow = "1.0.75"
hex = "0.4.3"
heapless = "0.8.0"
bytes = "1.5.0"
byteorder = "1.5.0"
# esp32-nimble = "0.4"
# tokio = { version = "*", features = ["rt", "net", "io-util", "time", "sync", "parking_lot", "socket2", "mio"]  }
tokio = { version = "*", features = ["rt", "net", "io-util", "time"]  }
mio = { version = "0.8.8", features = ["log"] }
lazy_static = "1.4.0"
parking_lot = "0.12.1"
paste = "1.0.14"
socket2 = "0.5.5"
# my stuff here
# edge-executor = "0.4.1"
flume = { version = "0.11.0", default-features = false, features = ["async", "select"] }
thiserror = "1.0.52"
ssd1306 = "0.8.4"
embedded-graphics = "0.8.1"
display-interface = "0.4.1"
# image = { version = "0.24.7", default-features = false, features = ["bmp", "jpeg"] }
toml-cfg = "=0.1.3"
# esp-camera-rs = { git = "https://github.com/gchiii/esp-camera-rs.git" }
esp-camera-rs = { path = "../gch-esp-camera-rs", version = "0.1.1" }
# async-io = "2"
# async-executor = "1"
# futures-lite = "1"
futures = "0.3.30"
# async-std = "1.12.0"
# smol = "2.0.0"

[build-dependencies]
embuild = "0.31.3"
toml-cfg = "=0.1.3"
prost-build = { version = "0.12.1" }
dotenvy = "0.15.7"
paste = "1.0.14"
quote = "1.0.33"

[patch.crates-io]
# esp32-nimble = { git = "https://github.com/taks/esp32-nimble" }
mio = { git = "https://github.com/tokio-rs/mio", branch = "v0.8.x" }
socket2 = { git = "https://github.com/rust-lang/socket2", branch = "master" }
tokio = { git = "https://github.com/tokio-rs/tokio", branch = "master" }
