[package]
name = "ttgo-camera"
version = "0.1.0"
authors = ["George C. Huntington III "]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "z"
#lto = "off"
overflow-checks = false

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
overflow-checks = false
lto = "off"

[features]
default = ["std", "hal", "embassy", "esp-idf-sys/native"]

pio = ["esp-idf-sys/pio"]
all = ["std", "nightly", "experimental", "embassy"]
hal = ["esp-idf-hal", "embedded-svc", "esp-idf-svc"]
std = [
  "alloc",
  "esp-idf-sys/std",
  "esp-idf-sys/binstart",
  "embedded-svc?/std",
  "esp-idf-hal?/std",
  "esp-idf-svc?/std",
  "esp-idf-hal?/embedded-io-async",
  "esp-idf-hal?/embedded-hal-async",
]
alloc = ["embedded-svc?/alloc", "esp-idf-hal?/alloc", "esp-idf-svc?/alloc"]
nightly = [
  "embedded-svc?/nightly",
  "esp-idf-svc?/nightly",
] # Future: "esp-idf-hal?/nightly"
experimental = ["embedded-svc?/experimental", "esp-idf-svc?/experimental"]
embassy = [
  "esp-idf-hal?/embassy-sync",
  "esp-idf-hal?/critical-section",
  "esp-idf-svc?/embassy-sync",
  "esp-idf-svc?/critical-section",
  "esp-idf-svc?/embassy-time-driver",
  # "esp-idf-svc?/embassy-time-isr-queue",
]

[dependencies]
chrono = { version = "0.4.31", default-features = false, features = [
  "std",
  "clock",
] }
log = { version = "0.4.17", default-features = false }
esp-idf-sys = { version = "0.33.7", default-features = false }
esp-idf-hal = { version = "0.42.5", optional = true, default-features = false }
esp-idf-svc = { version = "0.47.3", optional = true, default-features = false }

embedded-svc = { version = "0.26.4", optional = true, default-features = false }
embedded-hal = "1.0.0-rc.1"
anyhow = "1.0.75"
hex = "0.4.3"
heapless = "0.8.0"
bytes = "1.5.0"
byteorder = "1.5.0"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
paste = "1.0.14"
# my stuff here
edge-executor = { version = "0.4.1", default-features = false, features = [
  "critical-section",
  "heapless",
  "portable-atomic",
  "portable-atomic-util",
  "std",
] }
embassy-futures = { version = "0.1" }
embassy-sync = { version = "0.5.0", features = ["std"] }
# embassy-time = { version = "0.2.0" }

# flume = { version = "0.11.0", default-features = false, features = ["async", "select"] }
thiserror = "1.0.52"
ssd1306 = "0.8.4"
embedded-graphics = "0.8.1"
display-interface = "0.5.0"
toml-cfg = "=0.1.3"
esp-camera-rs = { git = "https://github.com/gchiii/esp-camera-rs.git", version = "0.1.1"}
# esp-camera-rs = { path = "../gch-esp-camera-rs", version = "0.1.1" }
futures = "0.3.30"
embedded-text = "0.7.0"
embedded-layout = "0.4.1"
once_cell = { version = "1.19.0", features = ["parking_lot", "critical-section"] }
crossbeam-channel = "0.5.11"
# ouroboros = "0.18.2"
# awedio_esp32 = "0.4.1"
embedded-io = "0.6.1"
easy-parallel = "3.3.1"
# embassy-executor = "0.5.0"

[build-dependencies]
embuild = "0.31.3"
toml-cfg = "=0.1.3"
prost-build = { version = "0.12.1" }
dotenvy = "0.15.7"
paste = "1.0.14"
quote = "1.0.33"

[patch.crates-io]
# esp32-nimble = { git = "https://github.com/taks/esp32-nimble" }
# mio = { git = "https://github.com/tokio-rs/mio", branch = "v0.8.x" }
# socket2 = { git = "https://github.com/rust-lang/socket2", branch = "master" }
# tokio = { git = "https://github.com/tokio-rs/tokio", branch = "master" }
# esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys" }
# esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal" }
esp-idf-svc = { path = "../esp-idf-svc" }
# esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc", rev = "3ebaf6337dc00d8a4fa9a4f02640508c22a0faac" }
# esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc" }
# embedded-svc = { git = "https://github.com/esp-rs/embedded-svc", rev = "26731acf99430dd25914208aae81120c01dd5500" }
embedded-svc = { git = "https://github.com/esp-rs/embedded-svc" }
